# app-dev-panel

./: .gitignore  .mcp.json  ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RESPONSIVE_PLAN.md  composer.json  llms-full.txt  llms.txt  mago-analyze-baseline.php  mago-lint-baseline.php  mago.toml  modulite.php  phpunit.xml.dist  plan.md  profile-README.md  setup-env.sh
.claude/: settings.json
clients/python/: pyproject.toml
clients/python/adp_client/: __init__.py  client.py  models.py
demo/: INSTALL_GUIDE.md  INSTALL_REPORT.md
design/: README.md
docker/: coverage.Dockerfile
docs/: FRONTEND_TEST_PLAN.md  acp-integration-plan.md  agent-client-protocol-study.md  architectural-constraints.md  architecture.md  buggregator-feature-analysis.md  ci-and-tooling.md  competitive-analysis.md  content-gaps-analysis.md  contributing.md  data-flow.md  design-system-analysis.md  editor-integration-opportunities.md  extensibility-analysis.md  feature-matrix.md  getting-started.md  http-mock-plan.md  ideas.md  laravel-install-report.md  marketing-analysis.md  mcp-server-plan.md  module-reviews.md  monorepo-subsplit-research.md  playgrounds.md  project-review-checklist.md  real-collectors-plan.md  roadmap.md  strategic-analysis.md  sync-plan.md  test-coverage-plan.md
openapi/: ingestion.yaml  inspector.yaml
scripts/: doctor.sh  generate-clients.sh  smoke-playgrounds.sh
tasks/: 001-kernel-filestorage-fixes.md  002-kernel-backtrace-optimization.md  003-kernel-logger-proxy-dedup.md  004-kernel-collector-trait-visibility.md  005-api-operator-precedence-fix.md  (+7 more)
(+1903 files in other folders)
